# alfalfa

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile  Makefile.am  README.md  bool_decoder.c  bool_decoder.cc  bool_decoder.h  bool_decoder.hh  config.hh  configure.ac  dequant_data.h  dixie.c  dixie.cc  dixie.h  dixie.hh  dixie_loopfilter.c  dixie_loopfilter.cc  dixie_loopfilter.h  fetch-grpc.sh  fetch-tests.sh  frame_deps.cc  frame_state.cc  frame_state.hh  idct_add.c  mem.h  mem.hh  modemv.c  modemv.cc  modemv.h  modemv.hh  modemv_data.h  operator_parser.cc  operator_parser.hh  predict.c  predict.cc  predict.h  rfc6386.txt  (+37 more)
dx2/: Makefile.am  dixie.cc  dixie.hh  vpx_codec.hh  vpx_decoder.hh
dx3/: 2d.hh  Makefile.am  ahab_shader.hh  bit_ops.hh  block.cc  block.hh  bool_decoder.cc  bool_decoder.hh  chunk.hh  display.cc  display.hh  exception.hh  file.cc  file.hh  frame.cc  frame.hh  frame_header.cc  frame_header.hh  ivf.cc  ivf.hh  loopfilter.cc  loopfilter.hh  loopfilter_filters.cc  macroblock_header.cc  macroblock_header.hh  mb_records.cc  mb_records.hh  modemv_data.cc  modemv_data.hh  optional.hh  prediction.cc  quantization.cc  quantization.hh  raster.cc  raster.hh  tokens.cc  tokens.hh  transform.cc  tree.cc  tree.hh  (+10 more)
man/: Makefile.am  alfalfa-import.1
scripts/: fake-camera  run-contest
src/: Makefile.am  frame_deps.cc  frame_state.cc  operator_parser.cc  operator_parser.hh  test_vector_reader.hh
src/asm/: config.asm  x86_abi_support.asm
src/client/: Makefile.am  alfalfa_player.hh  frame_fetcher.cc  frame_fetcher.hh  frame_store.cc  frame_store.hh  video_map.cc  video_map.hh
src/decoder/: Makefile.am  block.hh  bool_decoder.hh  continuation_player.cc  continuation_player.hh  continuation_state.cc  continuation_state.hh  dct.cc  dct_sse.hh  dct_sse2.asm  decoder.cc  decoder.hh  decoder_hash.cc  decoder_hash.hh  decoder_state.cc  decoder_state.hh  decoder_tracking.cc  decoder_tracking.hh  dependency_tracker.hh  dependency_tracking.cc  dependency_tracking.hh  diff_generator.cc  diff_generator.hh  display.cc  enc_state_serializer.hh  file.cc  frame.cc  frame.hh  frame_handle.cc  frame_handle.hh  frame_header.cc  frame_header.hh  frame_info.cc  frame_info.hh  frame_pool.cc  frame_pool.hh  fwalsh_sse2.asm  idctllm_mmx.asm  intrapred_sse.hh  intrapred_sse2.asm  (+53 more)
src/display/: Makefile.am  ahab_shader.hh  display.cc  display.hh  gl_objects.cc  gl_objects.hh
src/encoder/: Makefile.am  bool_encoder.hh  continuation.cc  continuation_player.cc  continuation_player.hh  costs.cc  costs.hh  dct.cc  dct.hh  encode_inter.cc  encode_intra.cc  encode_tree.cc  encoder.cc  encoder.hh  frame_input.hh  ivf_reader.cc  ivf_reader.hh  reencode.cc  safe_references.cc  serializer.cc  size_estimation.cc  token_costs.cc  token_costs.hh  variance.cc  variance_sse2.c  yuv4mpeg.cc  yuv4mpeg.hh
src/format/: Makefile.am  alfalfa_player.cc  alfalfa_player.hh  alfalfa_request_type.hh  alfalfa_video.cc  alfalfa_video.hh  alfalfa_video_client.cc  alfalfa_video_client.hh  alfalfa_video_proxy.cc  alfalfa_video_proxy.hh  alfalfa_video_server.cc  alfalfa_video_server.hh  alfalfa_video_service.cc  alfalfa_video_service.hh  database.cc  database.hh  db.cc  db.hh  frame_db.cc  frame_db.hh  kvstore.hh  manifests.cc  manifests.hh  serialization.cc  serialization.hh
src/format/protobufs/: Makefile.am  alfalfa.proto
src/frontend/: Makefile.am  alfalfa-combine.cc  alfalfa-describe.cc  alfalfa-encode.cc  alfalfa-import.cc  alfalfa-play-manually.cc  alfalfa-play-semiauto.cc  alfalfa-play-super-manually.cc  alfalfa-server.cc  alfalfa-squash.cc  alfalfa-verify.cc  alfalfa-weave.cc  collisions.cc  comp-states.cc  decode-bundle.cc  denseify.cc  diff-sizes.cc  diff-streams-old.cc  diff-streams.cc  diff-videos.cc  dumbencode.cc  fake-webcam.cc  frameify.cc  frameinfo.cc  frameplayer.cc  graphgen.cc  real-webcam.cc  rewrite-as-intra.cc  roundtrip.cc  salsify-receiver.cc  salsify-sender.cc  smartframeplayer.cc  switch-describe.cc  vp8decode.cc  vp8play.cc  vp8scan.cc  xc-diff.cc  xc-dissect.cc  xc-dump.cc  xc-enc.cc  (+6 more)
src/input/: Makefile.am  camera.cc  camera.hh  frame_input.hh  ivf_reader.cc  ivf_reader.hh  jpeg.cc  jpeg.hh  yuv4mpeg.cc  yuv4mpeg.hh
src/net/: Makefile.am  address.cc  (+15 more)
src/protobufs/: Makefile.am  alfalfa.proto
src/salsify/: Makefile.am  display-jpeg.cc  fake-webcam.cc  real-webcam.cc  salsify-receiver.cc  salsify-sender.cc
src/tests/: Makefile.am  alf-decode-to-stdout.cc  alf-decoding-combine.test  alf-decoding.test  alfalfa-combine-check.cc  alfalfa-combine-encode-multiple.test  alfalfa-combine-encode.test  alfalfa-combine.test  alfalfa-continuation-switch.cc  alfalfa-decode-to-stdout.cc  alfalfa-decoding-combine.test  alfalfa-decoding.test  alfalfa-encode-check.cc  alfalfa-encode.test  alfalfa-fake-switch.cc  alfalfa-import-check.cc  alfalfa-import.test  alfalfa-server-check.cc  alfalfa-server.test  alfalfa-weave.test  combine-test.cc  continuation-test.cc  convergence.test  decode-to-stdout.cc  decoding-test  decoding.test  encode-loopback.cc  end-to-end-combine.test  end-to-end-import-test  end-to-end-import.test  extract-key-frames.cc  fdct-test.cc  fetch-convergence-test.test  fetch-encoder-vectors.test  fetch-playability-test.test  fetch-vectors.test  framedb-benchmark.cc  framedb-test.cc  framedb-verify  frames-to-stdout.cc  (+19 more)
src/util/: 2d.hh  Makefile.am  child_process.cc  child_process.hh  chunk.hh  exception.hh  file.cc  file.hh  file_descriptor.hh  filesystem.cc  filesystem.hh  finally.hh  ivf.cc  ivf.hh  ivf_writer.cc  ivf_writer.hh  mmap_region.cc  mmap_region.hh  optional.hh  paranoid.cc  paranoid.hh  procinfo.cc  procinfo.hh  raster.cc  raster.hh  safe_array.hh  signalmask.cc  signalmask.hh  ssim.cc  ssim.hh  subprocess.cc  subprocess.hh  system_runner.cc  system_runner.hh  temp_file.cc  temp_file.hh
vp8/: Makefile.am  bit_ops.hh  bool_decoder.hh  dixie_loopfilter.cc  idct_add.cc  idct_add.hh  mem.hh  modemv.cc  modemv.hh  predict.cc  tokens.cc  vp8_dixie_iface.cc  vp8_dixie_iface.hh  vp8_prob_data.hh  vpx_codec.cc  vpx_decoder.hh  vpx_encoder.hh  vpx_image.hh
(+3 files in other folders)
