AM_CXXFLAGS = $(PICKY_CXXFLAGS)

bin_PROGRAMS = vp8scan

vp8scan_SOURCES = vp8scan.cc exception.hh file_descriptor.hh \
	file.cc file.hh block.hh \
	ivf.hh ivf.cc vp8_parser.hh vp8_parser.cc \
	bool_decoder.hh bool_decoder.cc \
	uncompressed_chunk.hh uncompressed_chunk.cc \
	frame_header.hh frame_header.cc optional.hh vp8_header_structures.hh \
	tree.cc mb_records.hh mb_records.cc 2d.hh
