AM_CXXFLAGS = $(PICKY_CXXFLAGS)

bin_PROGRAMS = vp8scan

vp8scan_SOURCES = vp8scan.cc exception.hh file_descriptor.hh \
	file.cc file.hh chunk.hh \
	ivf.hh ivf.cc vp8_parser.hh vp8_parser.cc \
	bool_decoder.hh bool_decoder.cc \
	uncompressed_chunk.hh uncompressed_chunk.cc \
	frame_header.hh frame_header.cc optional.hh vp8_header_structures.hh \
	tree.cc macroblock_header.hh macroblock_header.cc 2d.hh \
	modemv_data.hh modemv_data.cc \
	vp8_prob_data.hh vp8_prob_data.cc \
	frame.hh frame.cc block.hh \
	tokens.hh tokens.cc raster.hh raster.cc \
	transform.cc quantization.hh quantization.cc
