AM_CXXFLAGS = $(PICKY_CXXFLAGS)

noinst_LIBRARIES = libdixie.a

libdixie_a_SOURCES = bit_ops.hh bool_decoder.hh dequant_data.hh dixie.cc dixie.hh dixie_loopfilter.cc dixie_loopfilter.hh idct_add.cc idct_add.hh mem.hh modemv.cc modemv_data.hh modemv.hh predict.cc predict.hh tokens.cc tokens.hh vp8_dixie_iface.cc vp8_dixie_iface.hh vp8_prob_data.hh vpx_codec.cc vpx_codec.hh vpx_codec_internal.hh vpx_decoder_compat.hh vpx_decoder.hh vpx_encoder.hh vpx_image.cc vpx_image.hh vpx_version.hh
