AM_CPPFLAGS = $(CXX11_FLAGS)
AM_CXXFLAGS = $(PICKY_CXXFLAGS) $(NODEBUG_CXXFLAGS)

noinst_LIBRARIES = libalfalfautil.a

libalfalfautil_a_SOURCES = 2d.hh chunk.hh exception.hh file.cc \
  file_descriptor.hh file.hh ivf.cc ivf.hh \
  optional.hh safe_array.hh raster.hh raster.cc ssim.hh ssim.cc \
  ivf_writer.hh ivf_writer.cc mmap_region.hh mmap_region.cc \
  subprocess.hh subprocess.cc \
  temp_file.hh temp_file.cc \
  child_process.hh child_process.cc \
  signalmask.hh signalmask.cc
